# tetris-challenge

./: Block.cpp  Block.h  CMakeLists.txt  CStopWatch.cpp  CStopWatch.h  ConsoleVersion.vcproj  GameGrid.cpp  GameGrid.h  GameState.cpp  GameState.h  GameStateNode.cpp  GameStateNode.h  GenericGrid.h  GraphicalVersion.vcproj  Makefile  Parser.cpp  Parser.h  ProjectHome.md  PuzzleSolver.cpp  PuzzleSolver.h  QtTetris.config  QtTetris.files  QtTetris.includes  QtTetris.pro  QtTetris_vs2010.sln  QtTetris_vs90.sln  README  README-meson  Screenshot.md  TODO.txt  Test.sln  Tetris.files  Tetris.includes  TetrisChallenge.sln  TetrisChallenge.vcproj  TetrisTest.sln  TetrisTestSuite.pro  TetrisTestSuite_vs90.sln  Visualizer.cpp  Visualizer.h  (+26 more)
Futile/: CMakeLists.txt  Futile_vs2010.vcxproj  Futile_vs2010.vcxproj.filters  Futile_vs90.vcproj
Futile/include/Futile/: Allocator.h  Array.h  Assert.h  Atomic.h  AutoPtrSupport.h  Boost.h  Config.h  Enum.h  GenericGrid.h  Grid.h  LeakDetector.h  Logger.h  Logging.h  MainThread.h  MainThreadImpl.h  MakeString.h  MemoryPool.h  Node.h  PrettyPrint.h  STMSupport.h  Singleton.h  Stopwatch.h  Threading.h  Timer.h  TypedWrapper.h  Worker.h  WorkerPool.h
Futile/src/: LeakDetector.cpp  Logger.cpp  Logging.cpp  MainThread.cpp  PrettyPrint.cpp  Stopwatch.cpp  Threading.cpp  Timer.cpp  Worker.cpp  WorkerPool.cpp
Main/QtTetris/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  NewGameDialog.h  QtTetris.vcproj  TetrisWidget.cpp  TetrisWidget.h  main.cpp
Main/QtTetris/MinGW/: CMakeLists.txt  ToolChain.MinGW.cmake  configure  main.cpp
Main/Tetris/testsuite/: CMakeLists.txt  TestSuite_vs90.vcproj  TetrisTestSuite_vs80.vcproj
QtTetris/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  NewGameDialog.cpp  NewGameDialog.h  QtMainThread.cpp  QtMainThread.h  QtTetris.pro  QtTetris.qrc  QtTetris.ui  QtTetris.vcproj  QtTetris_vs2010.vcxproj  QtTetris_vs2010.vcxproj.filters  TetrisWidget.cpp  TetrisWidget.h  main.cpp
Tetris/: CMakeLists.txt  Tetris_vs100.vcxproj  Tetris_vs100.vcxproj.filters  Tetris_vs2010.vcxproj  Tetris_vs80.vcproj  Tetris_vs90.vcproj  Todo.txt
Tetris/include/Tetris/: AISupport.h  AbstractWidget.h  Array.h  (+47 more)
Tetris/src/: AISupport.cpp  AbstractWidget.cpp  Allocator.cpp  Assert.cpp  Block.cpp  BlockFactory.cpp  BlockMover.cpp  BlockType.cpp  Computer.cpp  ComputerPlayer.cpp  Evaluator.cpp  EvilBlockFactory.cpp  Game.cpp  GameImpl.cpp  GameState.cpp  GameStateComparator.cpp  GameStateNode.cpp  GenericGrid.cpp  Gravity.cpp  Logger.cpp  Logging.cpp  MainThread.cpp  MainThread_QT.h  MultiThreadedNodeCalculator.cpp  MultiplayerGame.cpp  NodeCalculator.cpp  NodeCalculatorImpl.cpp  Player.cpp  PlayerImpl.cpp  Referee.cpp  STMWorker.cpp  STMWorker.h  STMWorkerPool.h  SimpleGame.cpp  SingleThreadedNodeCalculator.cpp  Threading.cpp  Unicode.cpp  Worker.cpp  WorkerPool.cpp
Tetris/testing/: CMakeLists.txt  Makefile  configure
Tetris/testsuite/: CMakeLists.txt  TestSuite_vs100.vcxproj  TestSuite_vs100.vcxproj.filters  TestSuite_vs90.vcproj  TetrisTestSuite_vs80.vcproj
TetrisCore/: CMakeLists.txt  GameStateNode.cpp  TetrisCore_vs100.vcxproj  TetrisCore_vs100.vcxproj.filters  TetrisCore_vs90.vcproj  Todo.txt
TetrisCore/include/: Block.h  BlockFactory.h  BlockType.h  ErrorHandling.h  Game.h  GameController.h  GameQualityEvaluator.h  GameState.h  GameStateNode.h  GenericGrid.h  Grid.h  JobList.h  JobRunner.h  Logger.h  Player.h  ThreadSafeGame.h  TimedGame.h
TetrisCore/src/: AISupport.cpp  Block.cpp  BlockFactory.cpp  BlockMover.cpp  ComputerPlayer.cpp  ComputerPlayerMt.cpp  Evaluator.cpp  Game.cpp  GameCommandQueue.cpp  GameController.cpp  GameQualityEvaluator.cpp  GameState.cpp  GameStateComparisonFunctor.cpp  GameStateNode.cpp  GameTimer.cpp  GenericGrid.cpp  Gravity.cpp  JobList.cpp  Logger.cpp  MultiThreadedNodeCalculator.cpp  NodeCalculator.cpp  NodeCalculatorImpl.cpp  Player.cpp  SingleThreadedNodeCalculator.cpp  ThreadSafeGame.cpp  Threading.cpp  TimedGame.cpp  Unicode.cpp  Worker.cpp  WorkerPool.cpp  WorkerThread.cpp
TetrisCore/testsuite/: CMakeLists.txt  TestSuite_vs100.vcxproj  TestSuite_vs100.vcxproj.filters  TestSuite_vs90.vcproj
trunk/: Block.cpp  Block.h  BoostTest.sln  CMakeLists.txt  CStopWatch.h  ConsoleVersion.vcproj  GameState.cpp  GameState.h  GameStateNode.cpp  GameStateNode.h  GenericGrid.h  GraphicalVersion.vcproj  MakeDarwin.sh  Makefile  Parser.cpp  Parser.h  PuzzleSolver.cpp  PuzzleSolver.h  QtTetris.config  QtTetris.files  QtTetris.includes  QtTetris.pro  QtTetris_vs2010.sln  Test.sln  Tetris.files  Tetris.includes  TetrisChallenge.sln  TetrisChallenge.vcproj  TetrisTest.sln  TetrisTestSuite.pro  TetrisTestSuite.sln  TetrisTestSuite_vs90.sln  Visualizer.cpp  Visualizer.h  WinMain.cpp  XULWinTetrisTest.sln  XULWinTetrisTest_vs100.sln  XULWinTetrisTest_vs80.sln  XULWinTetrisTest_vs90.sln  configure  (+2 more)
trunk/BoostTest/: main.cpp
trunk/ConsoleTest/: ConsoleTest.vcproj  main.cpp
trunk/Futile/: CMakeLists.txt  Futile_vs90.vcproj
trunk/Main/: CMakeLists.txt  QtTetris.pro  TetrisTestSuite.pro  TetrisTestSuite_vs90.sln  XULWinTetrisTest_vs90.sln  configure-qttetris  configure-testsuite  rebuild
trunk/QtTetris/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  QtMainThread.cpp  QtMainThread.h  QtTetris.pro  QtTetris.qrc  QtTetris.vcproj  Tetris.config  Tetris.includes  TetrisWidget.cpp  TetrisWidget.h  main.cpp
trunk/Test/: Visualizer.cpp  Visualizer.h  WinMain.cpp
trunk/Tetris/: CMakeLists.txt  Tetris_vs100.vcxproj  Tetris_vs100.vcxproj.filters  Tetris_vs80.vcproj  Tetris_vs90.vcproj  Todo.txt
trunk/TetrisCore/: CMakeLists.txt  GameState.h  TetrisCore_vs100.vcxproj  TetrisCore_vs100.vcxproj.filters  TetrisCore_vs90.vcproj  Todo.txt
trunk/XULWinTetris/: XULWinTetris.vcproj  XULWinTetris_vs100.vcxproj  XULWinTetris_vs80.vcproj  XULWinTetris_vs90.vcproj
trunk/XULWinTetrisTest/: Controller.cpp  Controller.h  WinMain.cpp  XULWinTetrisTest.xul  XULWinTetrisTest_vs100.vcxproj  XULWinTetrisTest_vs100.vcxproj.filters  XULWinTetrisTest_vs80.vcproj  XULWinTetrisTest_vs90.vcproj
(+796 files in other folders)
