include_directories(include)


add_library(Tetris
    include/Tetris/AISupport.h
    include/Tetris/Allocator.h
    include/Tetris/Assert.h
    include/Tetris/AutoPtrSupport.h
    include/Tetris/Block.h
    include/Tetris/BlockFactory.h
    include/Tetris/BlockMover.h
    include/Tetris/BlockType.h
    include/Tetris/BlockTypes.h
    include/Tetris/ComputerPlayer.h
    include/Tetris/Config.h
    include/Tetris/Direction.h
    include/Tetris/Enum.h
    include/Tetris/Evaluator.h
    include/Tetris/ForwardDeclarations.h
    include/Tetris/Game.h
    include/Tetris/SimpleGame.h
    include/Tetris/GameOver.h
    include/Tetris/GameState.h
    include/Tetris/GameStateComparator.h
    include/Tetris/GameStateNode.h
    include/Tetris/GenericGrid.h
    include/Tetris/Gravity.h
    include/Tetris/Grid.h
    include/Tetris/Logger.h
    include/Tetris/Logging.h
    include/Tetris/MakeString.h
    include/Tetris/MultithreadedNodeCalculator.h
    include/Tetris/NodeCalculator.h
    include/Tetris/NodeCalculatorImpl.h
    include/Tetris/NodePtr.h
    include/Tetris/SingleThreadedNodeCalculator.h
    include/Tetris/Tetris.h
    include/Tetris/Threading.h
    include/Tetris/TypedWrapper.h
    include/Tetris/Unicode.h
    include/Tetris/Utilities.h
    include/Tetris/Worker.h
    include/Tetris/WorkerPool.h
    src/AISupport.cpp 
    src/Allocator.cpp 
    src/Block.cpp 
    src/BlockFactory.cpp 
    src/BlockMover.cpp 
    src/BlockType.cpp 
    src/ComputerPlayer.cpp 
    src/Game.cpp 
    src/SimpleGame.cpp 
    src/GenericGrid.cpp 
    src/Evaluator.cpp 
    src/GameState.cpp 
    src/GameStateComparator.cpp 
    src/GameStateNode.cpp 
    src/Gravity.cpp 
    src/Logger.cpp 
    src/Logging.cpp 
    src/MultiThreadedNodeCalculator.cpp 
    src/NodeCalculator.cpp 
    src/NodeCalculatorImpl.cpp 
    src/SingleThreadedNodeCalculator.cpp 
    src/Threading.cpp 
    src/Unicode.cpp 
    src/Worker.cpp
    src/WorkerPool.cpp)

set_target_properties(Tetris PROPERTIES COMPILE_FLAGS ${FINAL_COMPILE_FLAGS})

